# unifi-cert

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  unifi-cert.py  unifi-cert2.py  unifi-cert4.py
docs/: NVR-SETUP.md
tests/: __init__.py  conftest.py  test_unifi_cert.py
